# smg

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Makefile  README.md  mkdocs.yml
.github/: CODEOWNERS
.github/actions/setup-rust/: action.yml
.github/workflows/: _build-engine-image.yml  benchmark-manual-policy.yml  benchmark-radix-tree.yml  benchmark-request-processing.yml  benchmark-tokenizer.yml  benchmark-tool-parser.yml  cancel-merged-pr-tests.yml  cancel-pr-workflows.yml  claude-code-review.yml  docs.yml  e2e-gpu-job.yml  labeler.yml  nightly-benchmark.yml  nightly-bfcl.yml  nightly-docker.yml  nightly-engine-docker.yml  nightly-mlx-bench.yml  nightly-tau2.yml  pr-naming-check.yml  pr-test-mlx.yml  pr-test-rust.yml  release-crates.yml  release-docker.yml  release-go.yml  release-grpc.yml  release-helm.yml  release-pypi-dev.yml  release-pypi.yml  release-sglang-docker.yml  release-tokenspeed-docker.yml  release-trtllm-docker.yml  release-vllm-docker.yml
bindings/golang/: Cargo.toml  client.go
bindings/golang/src/: client.rs  grpc_converter.rs  policy.rs  preprocessor.rs  proto_parse.rs  utils.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_arg_parser.py  test_cli.py  test_serve.py  test_startup_sequence.py
clients/openapi-gen/: Cargo.toml
clients/openapi-gen/src/: main.rs
clients/rust/: Cargo.toml
crates/auth/: Cargo.toml
crates/auth/src/: config.rs  jwt.rs  middleware.rs
crates/data_connector/: Cargo.toml
crates/data_connector/src/: common.rs  core.rs  factory.rs  hooked.rs  lib.rs  memory.rs  noop.rs  oracle.rs  oracle_migrations.rs  postgres.rs  postgres_migrations.rs  redis.rs  schema.rs
crates/data_connector/tests/: postgres_integration.rs
crates/grpc_client/: Cargo.toml  build.rs
crates/grpc_client/go/: README.md
crates/grpc_client/proto/: common.proto  sglang_scheduler.proto  tokenspeed_encoder.proto  tokenspeed_scheduler.proto  vllm_engine.proto
crates/grpc_client/python/: pyproject.toml
crates/grpc_client/python/smg_grpc_proto/: __init__.py
crates/grpc_client/python/tests/: test_lazy_imports.py
crates/grpc_client/src/: lib.rs  sglang_scheduler.rs  tokenizer_bundle.rs  tokenspeed_encoder.rs  tokenspeed_scheduler.rs  vllm_engine.rs
crates/kv_index/: Cargo.toml
crates/kv_index/benches/: throughput_bench.rs
crates/kv_index/src/: lib.rs  string_tree.rs  token_tree.rs
crates/mcp/: Cargo.toml
crates/mesh/: Cargo.toml
crates/mesh/src/: collector.rs  controller.rs  gossip_controller.rs  gossip_service.rs  kv.rs  lib.rs  mtls.rs  node_state_machine.rs  partition.rs  ping_server.rs  service.rs  stores.rs  sync.rs
crates/mm_rdma/: Cargo.toml
crates/mm_rdma/src/: lib.rs  nixl.rs  slot_pool.rs  stub.rs
crates/mock_worker/: Cargo.toml  README.md
crates/mock_worker/src/: config.rs  grpc.rs  http.rs  main.rs
crates/multimodal/: Cargo.toml
crates/multimodal/scripts/: generate_audio_mel_golden.py
crates/multimodal/src/: lib.rs  tracker.rs  types.rs
crates/multimodal/tests/: audio_mel_parity.rs  inkling_preprocess_golden.rs  (+1 more)
crates/protocols/: Cargo.toml
crates/reasoning_parser/: Cargo.toml
crates/tokenizer/: Cargo.toml
crates/tool_parser/: Cargo.toml
crates/wasm/: Cargo.toml
crates/workflow/: Cargo.toml
docker/: Dockerfile  engine.Dockerfile  include_wasm.Dockerfile
docs/: index.md
docs/contributing/: code-style.md  development.md
docs/getting-started/: grpc-workers.md  index.md  logging.md  multiple-workers.md  pd-disaggregation.md  service-discovery.md
docs/reference/: configuration.md  metrics.md  priority-scheduler.md
e2e_test/: conftest.py
e2e_test/chat_completions/: test_epd_multimodal.py  test_multimodal.py  test_openai_server.py
e2e_test/completions/: test_basic.py
e2e_test/embeddings/: test_basic.py  test_correctness.py
e2e_test/fixtures/: hooks.py  setup_backend.py
e2e_test/infra/: constants.py  gateway.py  model_specs.py  pd_logs.py  process_utils.py  test_epd_cmd_builders.py  worker.py  worker_pool.py
e2e_test/realtime/: test_realtime_local.py
e2e_test/router/: test_admin_ops.py  test_dp_routing.py  test_pd_mooncake.py  test_pd_nixl.py  test_pd_responses.py
grpc_servicer/: README.md  pyproject.toml
grpc_servicer/smg_grpc_servicer/: mm_rdma.py  mm_shm.py
grpc_servicer/smg_grpc_servicer/sglang/: request_manager.py  server.py  servicer.py  utils.py
grpc_servicer/smg_grpc_servicer/tokenspeed/: encoder_servicer.py  rdma_pixel.py  server.py  servicer.py
grpc_servicer/smg_grpc_servicer/vllm/: kv_transfer.py  servicer.py
grpc_servicer/tests/: test_dp_proto_fields.py  test_kv_transfer_params.py  test_token_id_array.py  test_tokenspeed_encoder_import.py  test_tokenspeed_kv_events.py
model_gateway/: Cargo.toml
model_gateway/benches/: manual_policy_benchmark.rs  radix_tree_benchmark.rs  request_processing.rs  wasm_instantiation.rs  wasm_middleware_latency.rs
model_gateway/src/: app_context.rs  health.rs  lib.rs  main.rs  server.rs  service_discovery.rs
model_gateway/tests/: cross_region_producers_test.rs  cross_region_sync_runtime_test.rs  cross_region_sync_test.rs  harmony_encoding_test.rs  mesh_integration_test.rs  scheduler_admission_test.rs  wasm_test.rs
scripts/: check_release_versions.sh  ci_agentic_svc_deps.sh  ci_download_model.sh  ci_install_sglang.sh  ci_install_tokenspeed.sh  ci_install_trtllm.sh  ci_install_vllm.sh  e2e-test.sh  install_opencv.sh  launch-pd-workers.sh  scale_load.py  scale_test.sh
scripts/bfcl/: README.md  launch_arm.sh  register_bfcl_model.py  run_ab.py
scripts/installation/: install-tokenspeed.sh
scripts/k8s-runner-resources/: README.md  agentic-services.yaml  arc-runner-autoscaler.yaml  runner-values-1-gpu-h100.yaml  runner-values-2-gpu-h100.yaml  runner-values-4-gpu-h100.yaml  runner-values-cpu.yaml  volcano-scheduler-configmap.yaml
scripts/oracle_flyway/: schema-config.yaml
scripts/tau2/: README.md  launch_arms.sh  run_ab.py
scripts/tests/: test_ci_agentic_svc_deps.sh  test_tau2_costmap_shim.py  test_tau2_run_ab.py
(+322 files in other folders)
