[package]
name = "smg-grpc-client"
version = "1.8.0"
edition = "2021"
description = "gRPC clients for vLLM, TensorRT-LLM, MLX, TokenSpeed, and SGLang backends"
license = "Apache-2.0"
repository = "https://github.com/lightseekorg/smg"
authors = [
    "Simo Lin <linsimo.mark@gmail.com>",
    "Chang Su <mckvtl@gmail.com>",
]
keywords = ["grpc", "vllm", "tokenspeed", "llm", "sglang"]
categories = ["api-bindings"]

[lib]
name = "smg_grpc_client"

[dependencies]
# Workspace dependencies
openai-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

# gRPC dependencies
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true

# Async/concurrency
futures.workspace = true

# Archive validation
sha2 = "0.11"
zip = "8.6"
tempfile = "3.27"

[build-dependencies]
tonic-prost-build = "0.14.6"
prost-build = "0.14.4"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
