[package]
name = "mock-worker"
version = "0.1.0"
edition = "2021"
publish = false
description = "Multi-port mock HTTP/gRPC inference worker for SMG gateway scale testing"

[[bin]]
name = "mock-worker"
path = "src/main.rs"

[dependencies]
smg-grpc-client.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
axum.workspace = true
serde_json.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
